--- a/scss/mixins/_layout.scss
+++ b/scss/mixins/_layout.scss
@@ -4,18 +4,6 @@ Main Container Mixins
 
 */
 
-@mixin make-container($gutter: $grid-gutter-width) {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: floor($gutter/2);
-    padding-right: ceil($gutter/2);
-    @include media-breakpoint-up(md) {
-        padding-left: floor($gutter);
-        padding-right: ceil($gutter);
-    }
-    @include clearfix;
-}
-
 @mixin max-width() {
     width: auto;
     position: relative;
@@ -83,9 +71,6 @@ Header
     height: $site-header-height-xs;
     @include media-breakpoint-up(md) {
        height: $site-header-height-md;
-    }
-    @include media-breakpoint-up(xl) {
-       height: $site-header-height-xl;
     }
     @include media-breakpoint-up(xxl) {
        height: $site-header-height-xxl;
